--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -1,22 +1,38 @@
 name: CICD
 
-on: [push,pull_request]
+on: [push, pull_request]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  all:
+  check:
+    name: Check
     runs-on: ubuntu-latest
     steps:
-    - name: checkout
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+    - uses: Swatinem/rust-cache@v2
     - name: format
       run: cargo fmt --check
     - name: lint
-      run: cargo clippy
+      run: cargo clippy -- -D warnings
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: Swatinem/rust-cache@v2
     - name: test
       run: cargo test
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    needs: [check, test]
+    steps:
+    - uses: actions/checkout@v4
+    - uses: Swatinem/rust-cache@v2
     - name: build
       run: cargo build --release
     - name: release
