--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ctf-tools"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -13,9 +13,11 @@ base64 = "0.22"
 clap = { version = "4", features = ["derive"] }
 crc32fast = "1"
 hex = "0.4"
+image = "0.25"
 infer = "0.15"
-once_cell = "1.19.0"
+once_cell = "1"
 plotters = "0.3"
+png = "0.17"
 regex = "1"
 serde_json = "1"
 thiserror = "1"
